--- a/index.html
+++ b/index.html
@@ -2,40 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>DOM</title>
-
+    <title>Task One</title>
+    <link rel="stylesheet" href="assts/css/bootstrap.css">
 </head>
 <body>
-<section class="container mt-5">
-    <h1 id="h1ID">What is BOM & What is DOM</h1>
-    <h1 class="h1Class">What is BOM & What is DOM</h1>
-    <h2 id="h2ID">What really JS DO?</h2>
-    <h2 class="h1Class">What really JS DO?</h2>
-    <hr>
-    <input class="form-control" type="text" name="cusName">
-    <button class="btn btn-danger mt-3">Test</button>
+<section class="container mt-3">
+    <section class="row">
+        <!--Case One-->
+        <div class="col">
+            <h1 class="h1">Hello There How are you.?</h1>
+            <input id="txt" class="form-control" type="text" placeholder="Input Something">
+            <button id="btn1" class="mt-2 btn btn-danger">Change Text</button>
+        </div>
+
+
+    </section>
 </section>
 
-
 <script>
-    //so first of all we need to find a way to select DOM
-    //elements before changing them
-
-    //so what are the ways to select DOM elements.?
-    document.getElementById("element_id"); //will return single element
-    document.getElementsByName("name_attribute")//will return a list
-    document.getElementsByClassName("class_name");//will return a list
-    document.getElementsByTagName("element_name");//will return a list
-    document.querySelector("css_selector");//will return a single element
-    document.querySelectorAll("css_selector");//will return a list
-
-    // document.getElementById("h1ID").addEventListener("click", function() {
-    //     document.querySelector("#h1ID").remove();
-    // });
-
-    document.querySelector('button').addEventListener("click",function(){
-        document.querySelector('.h1Class').innerText = document.querySelector('input').value;
+    document.querySelector('#txt').addEventListener("keyup",function(){
+        document.querySelector("h1").innerText=document.querySelector("input").value
     });
+    document.querySelector('#btn1').addEventListener("click",function(){
+        document.querySelector("h1").style.color='red'
+    });
+
 
 </script>
 </body>
