--- a/index.html
+++ b/index.html
@@ -180,72 +180,141 @@
 
 
 
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>Task Three</title>-->
+<!--    <link rel="stylesheet" href="asets/css/bootstrap.css">-->
+<!--</head>-->
+<!--<body>-->
+
+<!--<section class="container">-->
+<!--    <h1>Counter.!</h1>-->
+<!--    <div class="row">-->
+<!--        <div class="col-4">-->
+<!--            <input id="txt" class="form-control" type="number" placeholder="Input a Number" value="0">-->
+<!--            <button id="btnStart" class="btn btn-primary mt-2">Start</button>-->
+<!--            <button id="btnStop" class="btn btn-danger mt-2">Stop</button>-->
+<!--            <button id="btnMinus" class="btn btn-warning mt-2">-</button>-->
+<!--            <button id="btnIncrement" class="btn btn-success mt-2">+</button>-->
+<!--        </div>-->
+<!--        <div class="offset-1 col-3 shadow overflow-x-hidden d-flex justify-content-center align-items-center"-->
+<!--             style="height: 50vh">-->
+<!--            <h1 id="display" class="text-danger" style="font-size: 8em">0</h1>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</section>-->
+
+
+<!--<script>-->
+<!--    var btnStrt = document.querySelector("#btnStart");-->
+<!--    var btnStop = document.querySelector("#btnStop");-->
+<!--    var btnMin = document.querySelector("#btnMinus");-->
+<!--    var btnUp = document.querySelector("#btnIncrement");-->
+<!--    var txt = document.querySelector("#txt");-->
+<!--    var h1 = document.querySelector("#display");-->
+
+<!--    let timer;-->
+
+<!--    btnStrt.addEventListener("click", function () {-->
+<!--        let currentNum = parseInt(txt.value);-->
+
+<!--        if (currentNum === 0) {-->
+<!--            timer = setInterval(function () {-->
+<!--                let currentNum = h1.innerText;-->
+<!--                h1.innerText = parseInt(currentNum) + 1;-->
+<!--            }, 550);-->
+<!--        } else {-->
+<!--            timer = setInterval(function () {-->
+<!--                currentNum += 1;-->
+<!--                h1.innerText = currentNum;-->
+<!--            }, 550);-->
+<!--        }-->
+<!--    });-->
+
+<!--    btnStop.addEventListener("click", function () {-->
+<!--        clearInterval(timer);-->
+<!--    });-->
+
+<!--    btnMin.addEventListener("click", function () {-->
+<!--        clearInterval(timer)-->
+<!--        h1.innerText = parseInt(h1.innerText) - 1;-->
+<!--    });-->
+
+<!--    btnUp.addEventListener("click", function () {-->
+<!--        clearInterval(timer);-->
+<!--        h1.innerText = parseInt(h1.innerText) + 1;-->
+<!--    });-->
+
+<!--</script>-->
+<!--</body>-->
+<!--</html>-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Task Three</title>
+    <title>Tasks</title>
     <link rel="stylesheet" href="asets/css/bootstrap.css">
+
+    <style>
+        #con {
+            width: 200px;
+            height: 200px;
+        }
+    </style>
 </head>
 <body>
+<section class="container mt-5">
+    <h1 id="main">Traversing Methods in Jquery</h1>
+    <section class="row">
+        <div class="col-3">
+            <input id="txtIn" class="form-control" type="text" placeholder="input">
+            <button id="btn" class="btn btn-danger mt-2">Test</button>
 
-<section class="container">
-    <h1>Counter.!</h1>
-    <div class="row">
-        <div class="col-4">
-            <input id="txt" class="form-control" type="number" placeholder="Input a Number" value="0">
-            <button id="btnStart" class="btn btn-primary mt-2">Start</button>
-            <button id="btnStop" class="btn btn-danger mt-2">Stop</button>
-            <button id="btnMinus" class="btn btn-warning mt-2">-</button>
-            <button id="btnIncrement" class="btn btn-success mt-2">+</button>
         </div>
-        <div class="offset-1 col-3 shadow overflow-x-hidden d-flex justify-content-center align-items-center"
-             style="height: 50vh">
-            <h1 id="display" class="text-danger" style="font-size: 8em">0</h1>
+        <div class="col-5">
+            <ol class="list-group" id="task">
+
+            </ol>
         </div>
-    </div>
+        <div class="col">
+            <div id="con" class="shadow">
+                <img src="sss" class="w-100 h-100" alt="">
+            </div>
+        </div>
+    </section>
+    <section class="row mt-5">
+        <div class="col-12">
+            <ul id="ul" class="list-group">
+                <li>append()</li>
+                <li>prepend()</li>
+                <li>remove()</li>
+                <li>text()</li>
+                <li>val()</li>
+                <li>click()</li>
+                <li>attr()</li>
+                <li>css</li>
+            </ul>
+        </div>
+    </section>
 </section>
 
-
+<script src="asets/js/code.jquery.com_jquery-3.7.1.min.js"></script>
 <script>
-    var btnStrt = document.querySelector("#btnStart");
-    var btnStop = document.querySelector("#btnStop");
-    var btnMin = document.querySelector("#btnMinus");
-    var btnUp = document.querySelector("#btnIncrement");
-    var txt = document.querySelector("#txt");
-    var h1 = document.querySelector("#display");
 
-    let timer;
+    $("#btn").click(function () {
 
-    btnStrt.addEventListener("click", function () {
-        let currentNum = parseInt(txt.value);
+        let url = $('input').val();
 
-        if (currentNum === 0) {
-            timer = setInterval(function () {
-                let currentNum = h1.innerText;
-                h1.innerText = parseInt(currentNum) + 1;
-            }, 550);
-        } else {
-            timer = setInterval(function () {
-                currentNum += 1;
-                h1.innerText = currentNum;
-            }, 550);
-        }
+        $('#task').append('<li class="list-group-item">'+url+'</li>');
+
+        $('img').attr('src', url);
+
     });
 
-    btnStop.addEventListener("click", function () {
-        clearInterval(timer);
-    });
-
-    btnMin.addEventListener("click", function () {
-        clearInterval(timer)
-        h1.innerText = parseInt(h1.innerText) - 1;
-    });
-
-    btnUp.addEventListener("click", function () {
-        clearInterval(timer);
-        h1.innerText = parseInt(h1.innerText) + 1;
-    });
 
 </script>
 </body>
