--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
     </section>
 </section>
 
-<script src="asets/js/code.jquery.com_jquery-3.7.1.min.js"></script>
+<script src="SPA/assets/bootstrap/js/code.jquery.com_jquery-3.7.1.min.js"></script>
 <script>
 
     $("#btn").click(function () {
