--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div class="container-fluid  border-0" >
             <a class="navbar-brand" href="#">
-                <h4 style="color:white;">Finest SuperMarket</h4>
+                <h4 style="color:white;"> SuperMarket</h4>
             </a>
         </div>
         <div class="container-fluid  border-0">
